# r3-philosophers

./: CMakeLists.txt  Makefile  README.md  philo  r3_philosophers
includes/: philosophers.h
src/: libft_utils.c  linked_list.c  main.c  main_utils.c  parsing.c  print.c  thread.c  utils.c
